deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-demo
  labels:
    app: spring-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-demo
  template:
    metadata:
      labels:
        app: spring-demo
    spec:
      containers:
        - name: demo
          image: dimpuchr/my-app:23-latest
          ports:
            - containerPort: 8085
