service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-demo-service
spec:
  selector:
    app: spring-demo
  ports:
     - port: 8084
       targetPort: 8085
       nodePort: 30080
  type: NodePort
